tests/ok/prelude-optional-alias.ari
use std as core;

fn maybe(flag: bool) -> Optional[i64] {
  if flag {
    return Some(12);
  }
  return None<i64>();
}

fn bump(value: Optional[i64]) -> Optional[i64] {
  let inner = value?;
  return Some(inner + 1);
}

fn qualified(flag: bool) -> std::Optional[i64] {
  if flag {
    return std::Some(3);
  }
  return std::None<i64>();
}

fn aliased(flag: bool) -> core::Optional[i64] {
  if flag {
    return core::Some(5);
  }
  return core::None<i64>();
}

fn main() -> i64 {
  return (bump(maybe(true)) ?? 0) +
         (maybe(false) ?? 2) +
         (qualified(true) ?? 0) +
         (qualified(false) ?? 4) +
         (aliased(true) ?? 0);
}
