tests/errors/loop-break-owner-maybe-unavailable-use.ari
fn maybe_consume(condition: bool) -> i64 {
  let token: own i64 = 5;
  while condition {
    drop token;
    break;
  }
  drop token;
  return 0;
}

fn main() -> i64 {
  return maybe_consume(false);
}
